düzenlemeleri ekler.